@@ -1,3 +1,7 @@
+2020-09-13  Robby Stephenson  <robby@periapsis.org>
+
+	* Improved Entrez data source to use API key and honor rate limit.
+
 2020-09-02  Robby Stephenson  <robby@periapsis.org>
 
 	* Improved ISBNdb data source to search for multiple ISBN values (Bug 415883).
